# WorkSpace

./: .gitignore  123456.html  README.en.md  README.md  UploadModal.vue  index.html  jsconfig.json  package-lock.json  package.json  vite.config.js
biaoxingcaiji/: .gitignore
biaoxingcaiji/DjangoTest/: .gitignore  API_DOCUMENTATION.md  DATABASE_SETUP.md  DEPLOYMENT_GUIDE.md  QUICKSTART.md  README.md  deploy.bat  deploy.sh  manage.py  pyproject.toml  reference.py  test1.sql
biaoxingcaiji/DjangoTest/phenotype/: admin.py  apps.py  models.py  pagination.py  serializers.py  urls.py  views.py
biaoxingcaiji/DjangoTest/phenotype/migrations/: 0001_initial.py
biaoxingcaiji/DjangoTest/phenotype_project/: settings.py  urls.py  wsgi.py
biaoxingcaiji/vue3/: index.html  package-lock.json  package.json  vite.config.js
css/: base.css  collection.css  component.css  dashboard.css  index.css  login.css  register.css  toast.css
flutter_application_1/: main.dart
flutter_application_1/lib/: main.dart
golden-seed-system/zhongzitupu/: collection.html  index.html  longin.html  toast.html
phenotype_collection-main/lib/: attendance.dart  collection.dart  login.dart  main.dart  video_player_screen.dart
src/: App.vue  main.js
src/Vue/: CollectionDetail.vue  Dashboard.vue  DataCollection.vue  DownloadModal.vue  FieldSearch.vue  FileUpload.vue  Header.vue  ImagePreview.vue  ImageViewer.vue  Login.vue  NotesManager.vue  Profile.vue  Register.vue  Sidebar.vue  Tost.vue
src/js/: app.js  auth.js  index.js  indexedDB.js  toast.js  (+1 more)
zhongzitupu/: profile.html  register.html
(+65 files in other folders)
